--- a/src/Components/Header/MobileMenu/MobileMenu.css
+++ b/src/Components/Header/MobileMenu/MobileMenu.css
@@ -5,6 +5,7 @@
 
 .MobileMenu button {
     background: none repeat;
+    color: #000;
     border: none;
     margin: .8rem;
     font-size: 1rem;
