--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -27,6 +27,7 @@
 
 .heroBtn {
     background-color: #fff;
+    color: #000;
     border: none;
     font-size: 1rem;
     font-weight: bold;
