--- a/src/Components/MakeEveryCupAnExperience/MakeEveryCupAnExperience.css
+++ b/src/Components/MakeEveryCupAnExperience/MakeEveryCupAnExperience.css
@@ -29,6 +29,7 @@
 
 .MakeEveryCupAnExperience .left button {
     background: #fff;
+    color: #000;
     border: none;
     padding: 1rem 1.6rem;
     border-radius: 50px;
