--- a/src/Components/ShowUs/ShowUs.css
+++ b/src/Components/ShowUs/ShowUs.css
@@ -21,6 +21,7 @@
 
 .ShowUs .title button {
     background: none;
+    color: #000;
     border: 1px solid #000;
     padding: 0.1rem 1.2rem;
     border-radius: 50px;
@@ -28,6 +29,9 @@
     transition: all 0.3s;
     font: normal normal bold 12px/62px Josefin Sans;
     letter-spacing: 1.8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ShowUs .title button:hover {
