--- a/src/Components/TheUltimateBrewGuides/TheUltimateBrewGuides.css
+++ b/src/Components/TheUltimateBrewGuides/TheUltimateBrewGuides.css
@@ -26,6 +26,7 @@
 
 .TheUltimateBrewGuides .left button {
     background: none;
+    color: #000;
     border: 1px solid #000;
     padding: 1.2rem 3rem;
     border-radius: 50px;
